# yoyo-evolve-clean

./: .gitignore  CLAUDE.md  CLAUDE_CODE_GAP.md  Cargo.toml  IDENTITY.md  JOURNAL.md  LEARNINGS.md  README.md
.github/ISSUE_TEMPLATE/: bug.md  challenge.md  suggestion.md
.github/workflows/: ci.yml  evolve.yml
docs/: index.html  style.css
scripts/: build_site.py  evolve-local.sh  evolve.sh  format_issues.py
skills/communicate/: SKILL.md
skills/evolve/: SKILL.md
skills/research/: SKILL.md
skills/self-assess/: SKILL.md
src/: main.rs  provider.rs
