[package]
name = "yoyo"
version = "0.1.0"
edition = "2021"
default-run = "yoyo"
description = "A coding agent that evolves itself. Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/duggasco/yoyo-evolve"

[dependencies]
yoagent = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
